<resources>
    <string name="app_name">Leap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="already"> Already a member? Log in</string>
    <string name="alreadyMember"> Already a member?</string>
    <string name="title_activity_leap_view">LeapViewActivity</string>
    <string name="profile_activity">Profile</string>
    <string name="search">Search</string>
    <string name="share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="review">Review Leap</string>
    <string name="oneStar">Not Good</string>
    <string name="twoStars">OK</string>
    <string name="threeStars">Good</string>
    <string name="fourStars">Very Good</string>
    <string name="fiveStars">Amazing</string>
    <string name="reviewTitle">Title</string>
    <string name="description">Description</string>
    <string name="submit">Submit</string>
    <string name="cancel">Cancel</string>
    <string name="LeapTitle">Leap Title</string>
    <string name="time">Time</string>
    <string name="date">Date</string>
    <string name="currentTime">00 : 00</string>
    <string name="currentDate">March 19, 2016</string>
    <string name="makePublic">Make Public</string>
    <string name="done">Done</string>
    <string name="uploadPhoto">Upload Photo</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="Invited_User_Profile_Photo">Invited User profile photo</string>
    <string name="Confirmation_Rule">Confirmation Rule</string>
    <string name="rule_text">How many connection should accept the outing?</string>
    <string name="accept">Accept</string>
    <string name="decline">Decline</string>
    <string name="sign_up"><u>Sign Up</u></string>
    <string name="login"><u>Login</u></string>
    <string name="email">Email</string>
    <string name="noAccount">No account yet?</string>
    <string name="password">Password</string>
    <string name="circles">Circles</string>
    <string name="edit">Edit</string>
    <string name="circleName">Circle Name</string>
    <string name="publicSearch">Allow users to find me in public search.</string>
    <string name="contactsOnly">Receive invitations from contacts only.</string>
    <string name="publicLeaps">Leaps are public by default.</string>s
    <string name="ApproxPrice">Approx. Price</string>
    <string name="LeapLoc">Leap Location</string>
    <string name="next">Next</string>
    <string name="confirm">Confirm</string>
    <string name="inviteMore">Invite More</string>
    <string name="facebook_app_id">217988371915733</string>
    <string name="twitter_app_key">yfkcZ1xRe8Zs9vcsYOerFra3o</string>
    <string name="twitter_app_secret">byZynmYMtF4aKxgGoGISIcJxC0g1fTi5lWoWxJO4P4k9ZP8uio</string>
    <string name="City">City,Country</string>
    <string name="followers">Followers</string>
    <string name="following">Following</string>
    <string name="leaps">Leaps</string>
    <string name="profileName">Bkeeza El-Zawawy</string>
    <string name="profileBio">Welcome to my profile.</string>
    <string name="login_with_google">Login with Google+</string>
    <string name="oauth2_format">oauth2:%s</string>
    <string name="google_error_recoverable_oauth_error">"Recoverable Google OAuth error: "</string>
    <string name="google_error_google_play_services_not_available">Google Play Services are not available.</string>
    <string name="google_error_trying_to_connect_google_api">Trying to connect to Google API</string>
    <string name="google_error_auth_with_google">"Error authenticating with Google: "</string>
    <string name="google_error_network_error">"Network error: "</string>
    <string name="log_message_auth_successful">auth successful.</string>
    <string name="ahmedname">Ahmed</string>
    <string name="LeapId">LeapId</string>
    <string name="LE">L.E</string>
    <string name="error_loading_place_data">Error loading place data</string>
    <string name="create">Create</string>
    <string name="frag">frag</string>
    <string name="invite">Invite</string>
    <string name="forgot_save_data_alert">You forgot to save your data</string>
    <string name="didnt_add_places_alert">You didn\'t add your outing\'s places</string>
    <string name="displayName">displayName</string>
    <string name="google">google</string>
    <string name="oauth_token"><![CDATA[<OAuth Token>]]></string>
    <string name="logging_out_msg">Logging out…</string>
    <string name="account_not_created">Account was not created. Please try again</string>
    <string name="signup">Signup</string>
    <string name="creating_account">Creating Account…</string>
    <string name="account_created_successfully">Successfully created user account</string>
    <string name="signup_failed">Signup failed</string>
    <string name="atleast_3_chars">at least 3 characters</string>
    <string name="enter_valid_mail">enter a valid email address</string>
    <string name="invalid_password">Invalid Password</string>
    <string name="signupactivity">SignupActivity</string>
    <string name="successfully_created_user">Successfully created user account</string>
    <string name="users">users</string>
    <string name="emailll">email</string>
    <string name="nname">name</string>
    <string name="uid">uid</string>
    <string name="user">User</string>
    <string name="authenticating">Authenticating…</string>
    <string name="user_pict">User Picture</string>
    <string name="must_implement_onfraginter">must implement OnFragmentInteractionListener</string>
    <string name="le100">100 L.E</string>
    <string name="leap_image">Leap Image</string>
    <string name="circle_image">Circle image</string>
    <string name="map_image">Map Image</string>
    <string name="rule">Rule</string>
    <string name="_0_10">0/10</string>
    <string name="pending">Pending</string>
    <string name="invited_users">Invited Users</string>
    <string name="all_users_can_view_this_leap">All users can view this leap</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="account_picture">account picture</string>
    <string name="_150">150</string>
    <string name="_50">50</string>
    <string name="_10">10</string>
    <string name="profile">Profile</string>
    <string name="studying_time">Studying Time</string>
    <string name="creator">Creator</string>
    <string name="user_name">User Name</string>
    <string name="leap_logo">Leap Logo</string>
    <string name="place_name">Place Name</string>
    <string name="place_category">Place Category</string>
    <string name="place_address">Place Address</string>
    <string name="place_details">Place Details</string>
    <string name="place_image">Place Image</string>
    <string name="ahmad_adel">Ahmad Adel</string>
    <string name="created">Created</string>
    <string name="leaped">Leaped</string>
    <string name="likes">Likes</string>
    <string name="reviewss">Reviews</string>
    <string name="discover">Discover</string>
    <string name="my_leaps">My Leaps</string>
    <string name="logout">LogOut</string>
    <string name="settings">Settings</string>
    <string name="favorite">Favorite</string>
    <string name="approx">Approx.</string>
    <string name="name">Name</string>
    <string name="uncheck_receive_anyone">Uncheck to receive invitations from anyone.</string>
    <string name="changed_for_leap">Can be changed for each leap!</string>
    <string name="leapplace">LeapPlace</string>
    <string name="please_login_first">Please Login first</string>
    <string name="login_failed">Login failed</string>
    <string name="confirmation">Confirmation</string>
    <string name="contacts">Contacts</string>
    <string name="map">Map</string>
    <string name="error_loading_map">Error Loading map</string>
    <string name="must_implment_onfragint">must implement OnFragmentInteractionListener</string>
    <string name="lnglength">LngLength</string>
    <string name="extra">EXTRA</string>
    <string name="key">key</string>
    <string name="fragment_edit_name">fragment_edit_name</string>
    <string name="leap_saved">Leap Saved</string>
    <string name="timepicker">timePicker</string>
    <string name="datepicker">datePicker</string>
    <string name="info_saved_go_places">Info Saved, go to add your Places</string>
    <string name="error_loading_googleclient">Error loading GOOGLE client, Please check connection</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="configure">Configure</string>
    <string name="add_widget">Add widget</string>
    <string name="creator_image">Creator Image</string>
    <string name="review_image">Review Image</string>
    <string name="storage_perm">android.permission.WRITE_EXTERNAL_STORAGE</string>
    <string name="location_perm">android.permission.ACCESS_COARSE_LOCATION</string>
    <string name="fineLocation_perm">android.permission.ACCESS_FINE_LOCATION</string>
    <string name="getAccounts_perm">android.permission.GET_ACCOUNTS</string>
    <string name="useCredintials_perm">android.permission.USE_CREDENTIALS</string>
</resources>

