<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="@dimen/nav_header_height"
    android:background="@drawable/side_nav_bar"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/nav_header_vertical_spacing"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <ImageView
        android:id="@+id/account_user_pic"
        android:layout_width="86dp"
        android:layout_height="86dp"
        android:background="@color/black"
        android:clickable="true"
        android:contentDescription="@string/user_pict"
        android:focusable="true"
        android:onClick="profile"
        android:scaleType="fitCenter"
        android:src="@drawable/ic_account" />

    <TextView
        android:id="@+id/account_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_user_pic"
        android:gravity="center"
        android:hint="@string/name"
        android:paddingTop="@dimen/margin4"
        android:text="@string/profileName"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="@dimen/text12" />

    <TextView
        android:id="@+id/location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/account_name"
        android:drawableStart="@drawable/ic_my_location_black_24px"
        android:drawablePadding="@dimen/margin4"
        android:text="@string/City"
        android:textSize="@dimen/text12" />

    <LinearLayout
        android:id="@+id/intro"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/signup_button"
            android:layout_width="@dimen/size150"
            android:layout_height="30dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/margin24"
            android:background="@drawable/sign_up_button"
            android:onClick="SignUp"
            android:text="@string/sign_up"
            android:textAllCaps="true"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text12" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/member"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin4"
                android:text="@string/alreadyMember"
                android:textSize="@dimen/text12" />

            <TextView
                android:id="@+id/login"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin4"
                android:onClick="Login"
                android:padding="@dimen/margin_8"
                android:text="@string/login"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</RelativeLayout>