<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?actionBarSize"
        android:gravity="top"
        android:minHeight="?attr/actionBarSize"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:titleMarginTop="@dimen/margin16" />


    <ImageView
        android:id="@+id/header_confirm"
        android:layout_width="match_parent"
        android:layout_height="@dimen/size250"
        android:background="@drawable/mapscrsht2"
        android:fitsSystemWindows="true"
        android:scaleType="centerCrop" />

    <TextView
        android:id="@+id/leaptitle_Confirm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@id/header_confirm"
        android:layout_margin="@dimen/margin16"
        android:text="@string/LeapTitle"
        android:textColor="#ffe"
        android:textSize="@dimen/text16"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/ruleid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_confirm">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/margin16"
            android:text="@string/rule"
            android:textSize="@dimen/text16"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="@dimen/margin16"
            android:layout_marginBottom="@dimen/margin16"
            android:text="@string/_0_10"
            android:textSize="16sp" />
    </LinearLayout>

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_below="@+id/ruleid"
        android:layout_marginLeft="2dp"
        android:layout_marginRight="2dp"
        android:layout_marginBottom="4dp"
        android:background="@color/cardview_light_background"
        android:elevation="1dp" />

    <TextView
        android:id="@+id/pending"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/view"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:text="@string/pending"
        android:textColor="@color/orange"
        android:textSize="@dimen/text16" />

    <TextView
        android:id="@+id/invited_users"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/pending"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/margin16"
        android:text="@string/invited_users"
        android:textSize="@dimen/text16"
        android:textStyle="bold" />

    <GridView
        android:id="@+id/invited_users_grid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/invited_users" />

    <LinearLayout
        android:id="@+id/button_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark">

        <Button
            android:id="@+id/leap_invite"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/decline"
            android:textColor="@color/white"
            android:textSize="@dimen/text12" />

        <Button
            android:id="@+id/leap_done"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/colorPrimary"
            android:text="@string/accept"
            android:textColor="@color/white"
            android:textSize="@dimen/text12" />


    </LinearLayout>

</RelativeLayout>