<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/LeapTitleText"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:dividerPadding="@dimen/margin_8"
            android:paddingLeft="@dimen/margin_8"
            android:paddingTop="@dimen/margin16"
            android:paddingRight="@dimen/margin_8">

            <EditText
                android:id="@+id/LeapTitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/LeapTitle"
                android:imeOptions="actionNext"
                android:inputType="textCapWords"
                android:paddingTop="@dimen/margin_8"
                android:paddingBottom="@dimen/margin_8"
                android:textSize="@dimen/text16" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/LeapDesc"
            android:layout_width="match_parent"
            android:layout_height="72dp"
            android:dividerPadding="@dimen/margin_8"
            android:paddingLeft="@dimen/margin_8"
            android:paddingTop="@dimen/margin16"
            android:paddingRight="@dimen/margin_8">

            <EditText
                android:id="@+id/LeapDescription"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/description"
                android:imeOptions="actionNext"
                android:inputType="textAutoComplete|textCapSentences"
                android:paddingTop="@dimen/margin_8"
                android:paddingBottom="@dimen/margin_8"
                android:textSize="@dimen/text16" />
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="@dimen/margin_8">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/LeapLoc"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:dividerPadding="@dimen/margin_8"
                android:paddingEnd="@dimen/margin_8">

                <EditText
                    android:id="@+id/LeapLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/LeapLoc"
                    android:imeOptions="actionNext"
                    android:inputType="textAutoComplete"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8"
                    android:textSize="14sp" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/LeapPrice"
                android:layout_width="0dp"
                android:layout_height="72dp"
                android:layout_weight="1"
                android:dividerPadding="@dimen/margin_8">

                <EditText
                    android:id="@+id/Leap_Price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:hint="@string/ApproxPrice"
                    android:imeOptions="actionDone"
                    android:inputType="text"
                    android:paddingTop="@dimen/margin_8"
                    android:paddingBottom="@dimen/margin_8"
                    android:textSize="@dimen/text16" />
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_8"
            android:paddingRight="@dimen/margin_8">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/margin_8"
                android:layout_weight="2"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="@dimen/text12" />

                <TextView
                    android:id="@+id/date_spinner"
                    style="@style/Platform.Widget.AppCompat.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="@dimen/text12"
                    tools:text="@string/currentDate" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_8"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="@dimen/text12" />

                <TextView
                    android:id="@+id/time_spinner"
                    style="@style/Platform.Widget.AppCompat.Spinner"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:textSize="@dimen/text12"
                    tools:text="@string/currentTime" />
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_8"
            android:orientation="horizontal"
            android:paddingLeft="@dimen/margin_8"
            android:paddingRight="@dimen/margin_8">

            <android.support.v7.widget.AppCompatImageView
                android:id="@+id/make_public"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:padding="@dimen/margin_8"
                android:src="@drawable/vector_drawable_ic_info_black___px" />

            <android.support.v7.widget.AppCompatCheckBox
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:hint="@string/all_users_can_view_this_leap"
                android:layoutDirection="rtl"
                android:text="@string/makePublic"
                android:textSize="@dimen/text12" />


        </LinearLayout>

        <android.support.design.widget.FloatingActionButton
            android:id="@+id/nextButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:elevation="@dimen/margin4"
            android:src="@drawable/vector_drawable_ic_save_white___px"
            app:elevation="@dimen/elev6" />
    </LinearLayout>
</ScrollView>