<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/circle_popup"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_margin="@dimen/margin_8"
    android:background="@color/white"
    android:elevation="@dimen/margin_8"
    android:orientation="vertical"
    android:padding="@dimen/margin_8">

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_8"
        android:layout_marginBottom="@dimen/margin_8"
        android:padding="@dimen/margin_8">

        <EditText
            android:id="@+id/new_circle_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/circleName"
            android:textSize="16sp" />
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/cancel_circle_name"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:onClick="CancelCreateCircle"
            android:text="@string/cancel"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text12" />

        <Button
            android:id="@+id/circle_name_done"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/white"
            android:onClick="CreateNewCircle"
            android:text="@string/done"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text12" />

    </LinearLayout>
</LinearLayout>